<resources>
    <string name="app_name">Copa</string>
    <string name="tunisia">TUNISIA</string>
    <string name="escalacao">Ver Escalação</string>
    <string name="data1">22/11</string>
    <string name="data2">26/11</string>
    <string name="data3">30/11</string>
    <string name="dinamarca">DINAMARCA</string>
    <string name="australia">AUSTRÁLIA</string>
    <string name="franca">FRANÇA</string>
</resources>